# 2026-02-17--ffmpeg-tui

./: .gitignore  README.md  pyproject.toml
src/ffmpeg_tui/: __init__.py  __main__.py  app.py
src/ffmpeg_tui/models/: codecs.py  job.py  probe.py
ttmp/2026/02/17/FF-001-FFMPEG-TUI--ffmpeg-cross-encoding-tui-design-analysis/: README.md  changelog.md  index.md  tasks.md
ttmp/2026/02/17/FF-001-FFMPEG-TUI--ffmpeg-cross-encoding-tui-design-analysis/design/: 01-ffmpeg-tui-design-analysis.md
ttmp/2026/02/17/FF-001-FFMPEG-TUI--ffmpeg-cross-encoding-tui-design-analysis/reference/: 01-diary.md
